--- a/index.html/index.html
+++ b/index.html/index.html
@@ -51,8 +51,7 @@
       min-width: 240px;
     }
 
-    /* Inline “logo” badge (since you don't want external files).
-       Replace this SVG with your real logo later if you want. */
+    <img src="logo_optimized.webp" alt="Custom Style Ads Logo">
     .logoBadge{
       width: 44px; height: 44px;
       border-radius: 14px;
@@ -776,4 +775,5 @@ ${message}`
     })();
   </script>
 </body>
+
 </html>
