--- a/index.html/index.html
+++ b/index.html/index.html
@@ -51,7 +51,7 @@
       min-width: 240px;
     }
 
-    <img src="logo_optimized.webp" alt="Custom Style Ads Logo">
+    <img src="images/logo_optimized.webp"> alt="Custom Style Ads Logo">
     .logoBadge{
       width: 44px; height: 44px;
       border-radius: 14px;
@@ -777,3 +777,4 @@ ${message}`
 </body>
 
 </html>
+
