--- a/index.html/index.html
+++ b/index.html/index.html
@@ -51,9 +51,7 @@
       min-width: 240px;
     }
 
-    <img src="logo_optimized.webp" alt="Custom Style Ads Logo"> alt="Custom Style Ads Logo">
-    .logoBadge{
-      width: 44px; height: 44px;
+    <img src="logo_optimized.webp" alt="Custom Style Ads Logo" style="height:44px; width:auto;">
       border-radius: 14px;
       display:grid; place-items:center;
       background: linear-gradient(135deg, rgba(212,175,55,.22), rgba(240,215,122,.10));
@@ -777,6 +775,7 @@ ${message}`
 </body>
 
 </html>
+
 
 
 
