--- a/index.html/index.html
+++ b/index.html/index.html
@@ -419,10 +419,11 @@
         </a>
 
         <nav class="navlinks" aria-label="Site navigation">
-          <a href="#services">Services</a>
-          <a href="#packages">Packages</a>
-          <a href="#contact">Contact</a>
-        </nav>
+  <a href="#services">Services</a>
+  <a href="#packages">Packages</a>
+  <a href="portfolio.html">Work</a>
+  <a href="#contact">Contact</a>
+</nav>
 
         <div class="navCTA">
           <a class="btn btnGhost" href="mailto:CustomStyleAds@gmail.com?subject=Booking%20Request%20%E2%80%94%20Custom%20Style%20Ads">Book</a>
@@ -775,6 +776,7 @@ ${message}`
 </body>
 
 </html>
+
 
 
 
