--- a/index.html/index.html
+++ b/index.html/index.html
@@ -419,10 +419,10 @@
         </a>
 
         <nav class="navlinks" aria-label="Site navigation">
-  <a href="#services">Services</a>
-  <a href="#packages">Packages</a>
-  <a href="portfolio.html">Work</a>
-  <a href="#contact">Contact</a>
+  <a href="#services">Services</a> · 
+<a href="#packages">Packages</a> · 
+<a href="portfolio.html">Work</a> · 
+<a href="#contact">Contact</a>
 </nav>
 
         <div class="navCTA">
@@ -776,6 +776,7 @@ ${message}`
 </body>
 
 </html>
+
 
 
 
