--- a/index.html/index.html
+++ b/index.html/index.html
@@ -419,9 +419,9 @@
         </a>
 
         <nav class="navlinks" aria-label="Site navigation">
-  <a href="#services">Services</a> · 
-<a href="#packages">Packages</a> · 
-<a href="portfolio.html">Work</a> · 
+<a href="portfolio.html">Work</a>
+<a href="#services">Services</a>
+<a href="#packages">Packages</a>
 <a href="#contact">Contact</a>
 </nav>
 
@@ -776,6 +776,7 @@ ${message}`
 </body>
 
 </html>
+
 
 
 
