--- a/index.html/index.html
+++ b/index.html/index.html
@@ -419,7 +419,7 @@
         </a>
 
         <nav class="navlinks" aria-label="Site navigation">
-<a href="portfolio.html">Work</a>
+<a href="/portfolio.html">Work</a>
 <a href="#services">Services</a>
 <a href="#packages">Packages</a>
 <a href="#contact">Contact</a>
@@ -776,6 +776,7 @@ ${message}`
 </body>
 
 </html>
+
 
 
 
