--- a/portfolio.html
+++ b/portfolio.html
@@ -86,23 +86,21 @@ grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
 gap:36px;
 }
 
+section {
+  background: linear-gradient(to bottom, #ffffff, #f8fafc);
+}
+
 .portfolio-grid img{
-width:100%;
-border-radius:20px;
-box-shadow:0 25px 60px rgba(0,0,0,.12);
-transition:transform .3s ease;
-cursor:pointer;
+  border-radius:22px;
+  box-shadow:0 40px 100px rgba(15,23,42,.18);
+  transition:transform .4s ease, box-shadow .4s ease;
+  background:#fff;
+  padding:12px;
 }
 
 .portfolio-grid img:hover{
-transform:translateY(-8px);
-}
-
-footer{
-border-top:1px solid var(--border);
-padding:40px 0;
-color:var(--muted);
-font-size:13px;
+  transform:translateY(-10px) scale(1.02);
+  box-shadow:0 55px 120px rgba(15,23,42,.25);
 }
 </style>
 </head>
