--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,26 @@ section {
   background: linear-gradient(to bottom, #ffffff, #f8fafc);
 }
 
+.portfolio-grid{
+  max-width:1100px;
+  margin:auto;
+}
+
 .portfolio-grid img{
-  border-radius:22px;
-  box-shadow:0 40px 100px rgba(15,23,42,.18);
-  transition:transform .4s ease, box-shadow .4s ease;
+  width:100%;
+  max-height:520px;
+  object-fit:cover;
+  border-radius:20px;
+  box-shadow:0 28px 70px rgba(15,23,42,.16);
+  transition:transform .35s ease, box-shadow .35s ease;
   background:#fff;
-  padding:12px;
+  padding:10px;
+}
+
+@media(max-width:768px){
+  .portfolio-grid img{
+    max-height:360px;
+  }
 }
 
 .portfolio-grid img:hover{
