--- a/index.html/index.html
+++ b/index.html/index.html
@@ -106,11 +106,12 @@
 
     /* Hero */
     .hero{
-      padding: 72px 0 42px;
-      background:
-        radial-gradient(1100px 520px at 10% 10%, rgba(212,175,55,.16), transparent 55%),
-        radial-gradient(900px 480px at 95% 5%, rgba(15,23,42,.10), transparent 52%);
-    }
+  padding: 72px 0 42px;
+  background:
+    radial-gradient(1200px 600px at 10% 10%, rgba(212,175,55,.18), transparent 55%),
+    radial-gradient(900px 500px at 95% 5%, rgba(15,23,42,.12), transparent 52%),
+    linear-gradient(to bottom, #ffffff, #f9fbfd);
+}
     .heroGrid{
       display:grid;
       grid-template-columns: 1.15fr .85fr;
@@ -776,6 +777,7 @@ ${message}`
 </body>
 
 </html>
+
 
 
 
