--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio | Custom Style Ads – Graphic & Marketing Designs</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
+  <title>Portfolio | Custom Style Ads – Graphic & Marketing Design</title>
+
+  <meta name="description" content="Custom Style Ads portfolio showcasing graphic design, marketing flyers, branding visuals, and promotional designs created to grow small businesses and local brands.">
+
+  <!-- SEO basics -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Social preview (nice bonus for sharing) -->
+  <meta property="og:title" content="Portfolio | Custom Style Ads">
+  <meta property="og:description" content="View graphic design, marketing flyers, branding visuals, and promotional work by Custom Style Ads.">
+  <meta property="og:type" content="website">
+
+  <style>
 :root{
 --bg:#ffffff;
 --text:#0b1220;
