--- a/portfolio.html
+++ b/portfolio.html
@@ -152,15 +152,23 @@ section {
     <h1>Recent Work</h1>
     <p class="sub">Real designs created to elevate brands and drive customers.</p>
 
-    <div class="portfolio-grid">
-      <img src="portfolio_1.jpg" alt="Design project">
-      <img src="portfolio_2.jpg" alt="Design project">
-      <img src="portfolio_3.jpg" alt="Design project">
-      <img src="portfolio_4.jpg" alt="Design project">
-      <img src="portfolio_5.jpg" alt="Design project">
-      <img src="portfolio_6.jpg" alt="Design project">
-      <img src="portfolio_7.jpg" alt="Design project">
-    </div>
+<div class="portfolio-grid">
+
+  <img src="portfolio_1.jpg" alt="Luxury beauty salon flyer design for marketing and customer bookings by Custom Style Ads">
+
+  <img src="portfolio_2.jpg" alt="Lash extension and skincare promotional flyer graphic design for beauty business marketing">
+
+  <img src="portfolio_3.jpg" alt="Professional landscaping service marketing flyer design for local business advertising">
+
+  <img src="portfolio_4.jpg" alt="Lawn care and mowing service promotional flyer graphic design for small businesses">
+
+  <img src="portfolio_5.jpg" alt="Restaurant branding graphic and promotional design for food business marketing">
+
+  <img src="portfolio_6.jpg" alt="High impact promotional flyer design for restaurant and event advertising">
+
+  <img src="portfolio_7.jpg" alt="Custom logo and branding identity design for business marketing">
+
+</div>
   </div>
 </section>
 
